--- a/POLLUTION/webpage/polldentify_hp.css
+++ b/POLLUTION/webpage/polldentify_hp.css
@@ -1,6 +1,13 @@
 body{
 	background:linear-gradient(to top, #C2DFFF, #3BB9FF) ;
 	background-attachment:fixed;
-	top:50%;
-	left:50%;
+	text-align: center;
+}
+
+#mapcontainer{
+	width:850px;
+	margin-bottom:30px;
+	margin-right: auto;
+	margin-left: auto;
+
 }
