--- a/POLLUTION/webpage/css/landing-page.css
+++ b/POLLUTION/webpage/css/landing-page.css
@@ -3,7 +3,7 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
-
+bs
 body,
 html {
     width: 100%;
@@ -168,3 +168,5 @@ footer {
 p.copyright {
     margin: 15px 0 0;
 }
+
+.btnPage{display:inline-block;padding:3px 3px;margin-bottom:0;font-size:14px;font-weight:400;line-height:1.42857143;text-align:center;white-space:nowrap;vertical-align:middle;-ms-touch-action:manipulation;touch-action:manipulation;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;background-image:none;border:1px solid transparent;border-radius:4px}
