Tried to do hello world

--- a/POLLUTION/webpage/partials/history.html
+++ b/POLLUTION/webpage/partials/history.html
@@ -5,7 +5,9 @@
     <div class="container">
         <div class="row" style="padding:50px;">
                 <div id = "mapcontainer"> <!-- GoogleMap Container-->
-                    <div id="googleMap" style="width:850px;height:500px;"></div>
+                    <div class="form-group col-lg-12" style="width:850px;height:500px" id="googleMap">
+                        <center>Waiting for the map...</center>
+                    </div>
                 </div>
                 <!-- <div class="intro-message"> -->
                 <!--     <h1>Landing Page</h1> -->
